--- a/ahs-stream-analytics/build.gradle
+++ b/ahs-stream-analytics/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     
     // JSON
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
     
     // Test
     testImplementation "org.apache.flink:flink-test-utils:${flinkVersion}"
