Add fleet management, telemetry processor, and data generator modules with Kafka integration and Flink-based anomaly detection, enhance Gradle builds, and provide Dockerized deployment for the AHS streaming platform.

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include 'ahs-fleet-management'
 include 'ahs-telemetry-processor'
 include 'ahs-stream-analytics'
 include 'ahs-common'
+include 'ahs-data-generator'
