--- a/ahs-thrift-api/build.gradle
+++ b/ahs-thrift-api/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':ahs-domain')
     implementation "org.apache.thrift:libthrift:${thriftVersion}"
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 // Generate Java sources from Thrift IDL.
