--- a/ahs-fleet-management/src/main/resources/application-docker.yml
+++ b/ahs-fleet-management/src/main/resources/application-docker.yml
@@ -24,15 +24,19 @@ kafka:
 server:
   port: 8080
 
-# Actuator for health checks
+# Actuator for health checks and Prometheus metrics
 management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics
+        include: health,info,metrics,prometheus
   endpoint:
     health:
       show-details: always
+  metrics:
+    export:
+      prometheus:
+        enabled: true
 
 # Logging
 logging:
