--- a/ahs-data-generator/Dockerfile
+++ b/ahs-data-generator/Dockerfile
@@ -1,4 +1,4 @@
-# Multi-stage build for AHS Fleet Management Service
+# Multi-stage build for AHS Data Generator
 FROM gradle:8.5-jdk17 AS builder
 
 WORKDIR /app
@@ -11,10 +11,10 @@ COPY gradle ./gradle
 COPY ahs-common ./ahs-common
 COPY ahs-domain ./ahs-domain
 COPY ahs-thrift-api ./ahs-thrift-api
-COPY ahs-fleet-management ./ahs-fleet-management
+COPY ahs-data-generator ./ahs-data-generator
 
 # Build the application (skip thrift compilation issues)
-RUN gradle :ahs-fleet-management:bootJar -x :ahs-thrift-api:compileJava --no-daemon
+RUN gradle :ahs-data-generator:bootJar -x :ahs-thrift-api:compileJava --no-daemon
 
 # Runtime stage
 FROM eclipse-temurin:17-jre-jammy
@@ -25,14 +25,14 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
 
 # Copy the built JAR
-COPY --from=builder /app/ahs-fleet-management/build/libs/*.jar app.jar
+COPY --from=builder /app/ahs-data-generator/build/libs/*.jar app.jar
 
 # Expose port
-EXPOSE 8083
+EXPOSE 8082
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8083/actuator/health || exit 1
+  CMD wget --no-verbose --tries=1 --spider http://localhost:8082/actuator/health || exit 1
 
 # Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
