--- a/ahs-fleet-management/build.gradle
+++ b/ahs-fleet-management/build.gradle
@@ -1,8 +1,3 @@
-plugins {
-    id 'org.springframework.boot' version '2.7.18'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-}
-
 dependencies {
     // Project dependencies
     implementation project(':ahs-common')
@@ -17,6 +12,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    
+    // Micrometer Prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    
+    // Caffeine cache
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     
     // Kafka
     implementation "org.apache.kafka:kafka-clients:${kafkaVersion}"
