--- a/ahs-stream-analytics/build.gradle
+++ b/ahs-stream-analytics/build.gradle
@@ -5,11 +5,10 @@ dependencies {
     // Flink dependencies
     implementation "org.apache.flink:flink-streaming-java:${flinkVersion}"
     implementation "org.apache.flink:flink-clients:${flinkVersion}"
-    implementation "org.apache.flink:flink-connector-kafka:${flinkVersion}"
+    implementation "org.apache.flink:flink-connector-kafka:${flinkKafkaConnectorVersion}"
     implementation "org.apache.flink:flink-connector-base:${flinkVersion}"
     
-    // Kafka
-    implementation "org.apache.kafka:kafka-clients:${kafkaVersion}"
+    // Kafka client is provided transitively by Flink Kafka connector
     
     // JSON
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
@@ -19,4 +18,23 @@ dependencies {
     testImplementation "org.apache.flink:flink-test-utils:${flinkVersion}"
     testImplementation "org.apache.flink:flink-runtime:${flinkVersion}:tests"
     testImplementation "org.apache.flink:flink-streaming-java:${flinkVersion}:tests"
+}
+
+// Create fat JAR for Flink deployment
+jar {
+    archiveBaseName = 'ahs-stream-analytics'
+    archiveVersion = project.version
+    
+    // Include dependencies in JAR
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    
+    manifest {
+        attributes(
+            'Main-Class': 'com.komatsu.ahs.stream.TelemetryStreamingJob'
+        )
+    }
 }
