Disable `bootJar` and related tasks for library and Flink modules, enable `jar` for non-Spring Boot projects in build configuration.

--- a/ahs-stream-analytics/build.gradle
+++ b/ahs-stream-analytics/build.gradle
@@ -8,6 +8,9 @@ dependencies {
     implementation "org.apache.flink:flink-connector-kafka:${flinkKafkaConnectorVersion}"
     implementation "org.apache.flink:flink-connector-base:${flinkVersion}"
     
+    // Flink CEP for Complex Event Processing
+    implementation "org.apache.flink:flink-cep:${flinkVersion}"
+    
     // Kafka client is provided transitively by Flink Kafka connector
     
     // JSON
