Add `ahs-proto` module with Protobuf support, define vehicle telemetry schema, and integrate module into dependent projects. Update Docker base images, migrate to JDK 17, and refine REST API paths for consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,10 @@ bin/
 *.log
 logs/
 
+# Protobuf generated sources (legacy + build outputs)
+ahs-proto/src/generated/
+ahs-proto/build/generated/
+
 # Package Files
 *.jar
 *.war
