--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include 'ahs-telemetry-processor'
 include 'ahs-stream-analytics'
 include 'ahs-common'
 include 'ahs-data-generator'
+include 'ahs-proto'
