--- a/ahs-data-generator/build.gradle
+++ b/ahs-data-generator/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
     
+    // YAML parsing
+    implementation 'org.yaml:snakeyaml:2.2'
+    
     // Protobuf
     implementation 'com.google.protobuf:protobuf-java:3.25.3'
     
