Make fleet management fully dynamic by removing mock fleet initialization, introducing dynamic vehicle registration via status/telemetry updates, and integrating YAML-based configuration in telemetry generator. Adjust default vehicle counts in tests and scripts.

--- a/ahs-data-generator/build.gradle
+++ b/ahs-data-generator/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     // Logging
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'ch.qos.logback:logback-classic:1.4.14'
+
+    // JMonkeyEngine core (math, scenegraph, collision) for headless ray casting
+    implementation 'org.jmonkeyengine:jme3-core:3.6.1-stable'
 }
 
 application {
