--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,7 +182,13 @@ services:
       - kafka
     ports:
       - "8082:8082"
-    command: ["--bootstrap-servers", "kafka:29092", "--topic", "ahs.telemetry.processed", "--vehicles", "25", "--interval", "5000"]
+    command: [
+      "--bootstrap-servers", "kafka:29092",
+      "--topic", "ahs.telemetry.processed",
+      "--vehicles", "25",
+      "--interval", "5000",
+      "--lidar-interval", "15000"
+    ]
     networks:
       - ahs-network
     restart: unless-stopped
