--- a/ahs-fleet-management/build.gradle
+++ b/ahs-fleet-management/build.gradle
@@ -2,7 +2,6 @@ dependencies {
     // Project dependencies
     implementation project(':ahs-common')
     implementation project(':ahs-domain')
-    implementation project(':ahs-thrift-api')
     
     // Javax Annotation API
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
@@ -23,8 +22,7 @@ dependencies {
     implementation "org.apache.kafka:kafka-clients:${kafkaVersion}"
     implementation 'org.springframework.kafka:spring-kafka'
     
-    // Thrift
-    implementation "org.apache.thrift:libthrift:${thriftVersion}"
+    // Thrift removed
     
     // Jackson for JSON processing
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
